--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sayyam Shahbaz</title>
-    <link rel="stylesheet" href="C:\Users\sayya\Documents\VSCODE\Web Development\CV Sayyamshahbaz\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: mintcream;">
     <table cellspacing = "20">
         <tr>
-            <td><img src="C:\Users\sayya\Documents\VSCODE\Web Development\CV Sayyamshahbaz\sayyam.png" alt="Profile Picture" width="200" height="200"></td>
+            <td><img src="sayyam.png" alt="Profile Picture" width="200" height="200"></td>
             <td><h1 style="color: black;"><strong>Sayyam Shahbaz</strong></h1>
                 <p style="color: black;">Enthusiastic and creative video editor with a strong passion for storytelling and visual content creation. Seeking to leverage my skills in video editing and post-production to contribute to a dynamic team and create engaging multimedia projects.</p></td>
         </tr>
@@ -50,8 +50,8 @@
         </tr>
     </table>
     <hr>
-    <a href="C:\Users\sayya\Documents\VSCODE\Web Development\CV Sayyamshahbaz\skills.html"><strong>Expierence</strong></a>
+    <a href="skills.html"><strong>Expierence</strong></a>
     <hr>
-    <a href="C:\Users\sayya\Documents\VSCODE\Web Development\CV Sayyamshahbaz\contactme.html"><strong>Contact Me</strong></a>
+    <a href="contactme.html"><strong>Contact Me</strong></a>
 </body>
 </html>
